# models/tr_solicitud.go
@@ -1,0 +1,8 @@
+package models
+
+type TrSolicitud struct {
+	Solicitud        *SolicitudTrabajoGrado
+	Respuesta        *RespuestaSolicitud
+	DetalleSolicitud *[]DetalleSolicitud
+	UsuarioSolicitud *[]UsuarioSolicitud
+}
