# swagger/swagger.json
@@ -154,6 +154,34 @@
                 }
             }
         },
+        "/tr_solicitud/": {
+            "post": {
+                "tags": [
+                    "tr_solicitud"
+                ],
+                "description": "create the TrSolicitud",
+                "operationId": "TrSolicitudController.PostTrSolicitud",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for TrSolicitud content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TrSolicitud"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.TrSolicitud"
+                    },
+                    "400": {
+                        "description": "the request contains incorrect syntax"
+                    }
+                }
+            }
+        },
         "/verificarRequisitos/CantidadModalidades": {
             "post": {
                 "tags": [
@@ -218,51 +246,59 @@
         }
     },
     "definitions": {
-        "6302.\u003cnil\u003e.VinculacionTrabajoGrado": {
+        "6993.\u003cnil\u003e.VinculacionTrabajoGrado": {
             "title": "VinculacionTrabajoGrado",
             "type": "object"
         },
-        "6475.\u003cnil\u003e.DetalleTrabajoGrado": {
+        "7166.\u003cnil\u003e.DetalleTrabajoGrado": {
             "title": "DetalleTrabajoGrado",
             "type": "object"
         },
-        "6800.\u003cnil\u003e.VinculacionTrabajoGrado": {
+        "7491.\u003cnil\u003e.VinculacionTrabajoGrado": {
             "title": "VinculacionTrabajoGrado",
             "type": "object"
         },
-        "6997.\u003cnil\u003e.VinculacionTrabajoGrado": {
+        "7688.\u003cnil\u003e.VinculacionTrabajoGrado": {
             "title": "VinculacionTrabajoGrado",
             "type": "object"
         },
-        "7441.\u003cnil\u003e.EspacioAcademicoInscrito": {
+        "8132.\u003cnil\u003e.EspacioAcademicoInscrito": {
             "title": "EspacioAcademicoInscrito",
             "type": "object"
         },
-        "7709.\u003cnil\u003e.EspacioAcademicoInscrito": {
+        "8400.\u003cnil\u003e.EspacioAcademicoInscrito": {
             "title": "EspacioAcademicoInscrito",
             "type": "object"
         },
-        "7799.\u003cnil\u003e.DetalleTrabajoGrado": {
+        "8490.\u003cnil\u003e.DetalleTrabajoGrado": {
             "title": "DetalleTrabajoGrado",
             "type": "object"
         },
-        "7881.\u003cnil\u003e.DetalleTrabajoGrado": {
+        "8572.\u003cnil\u003e.DetalleTrabajoGrado": {
             "title": "DetalleTrabajoGrado",
             "type": "object"
         },
-        "8065.\u003cnil\u003e.EstudianteTrabajoGrado": {
+        "8787.\u003cnil\u003e.DetalleSolicitud": {
+            "title": "DetalleSolicitud",
+            "type": "object"
+        },
+        "8826.\u003cnil\u003e.UsuarioSolicitud": {
+            "title": "UsuarioSolicitud",
+            "type": "object"
+        },
+        "8964.\u003cnil\u003e.EstudianteTrabajoGrado": {
             "title": "EstudianteTrabajoGrado",
             "type": "object"
         },
-        "8210.\u003cnil\u003e.AreasTrabajoGrado": {
+        "9109.\u003cnil\u003e.AreasTrabajoGrado": {
             "title": "AreasTrabajoGrado",
             "type": "object"
         },
-        "8257.\u003cnil\u003e.VinculacionTrabajoGrado": {
+        "9156.\u003cnil\u003e.VinculacionTrabajoGrado": {
             "title": "VinculacionTrabajoGrado",
             "type": "object"
         },
-        "8310.\u003cnil\u003e.AsignaturaTrabajoGrado": {
+        "9209.\u003cnil\u003e.AsignaturaTrabajoGrado": {
             "title": "AsignaturaTrabajoGrado",
             "type": "object"
         },
@@ -588,22 +624,22 @@
             "type": "object",
             "properties": {
                 "CausaProrroga": {
-                    "$ref": "#/definitions/7799.\u003cnil\u003e.DetalleTrabajoGrado"
+                    "$ref": "#/definitions/8490.\u003cnil\u003e.DetalleTrabajoGrado"
                 },
                 "DetallesPasantia": {
                     "$ref": "#/definitions/models.DetallePasantia"
                 },
                 "DetallesPasantiaExterna": {
-                    "$ref": "#/definitions/7881.\u003cnil\u003e.DetalleTrabajoGrado"
+                    "$ref": "#/definitions/8572.\u003cnil\u003e.DetalleTrabajoGrado"
                 },
                 "DocumentoSolicitud": {
                     "$ref": "#/definitions/models.DocumentoSolicitud"
                 },
                 "EspaciosAcademicos": {
-                    "$ref": "#/definitions/7441.\u003cnil\u003e.EspacioAcademicoInscrito"
+                    "$ref": "#/definitions/8132.\u003cnil\u003e.EspacioAcademicoInscrito"
                 },
                 "EspaciosAcademicosInscritos": {
-                    "$ref": "#/definitions/7709.\u003cnil\u003e.EspacioAcademicoInscrito"
+                    "$ref": "#/definitions/8400.\u003cnil\u003e.EspacioAcademicoInscrito"
                 },
                 "EstudianteTrabajoGrado": {
                     "$ref": "#/definitions/models.EstudianteTrabajoGrado"
@@ -633,10 +669,10 @@
                     "$ref": "#/definitions/models.TrabajoGrado"
                 },
                 "Vinculaciones": {
-                    "$ref": "#/definitions/6800.\u003cnil\u003e.VinculacionTrabajoGrado"
+                    "$ref": "#/definitions/7491.\u003cnil\u003e.VinculacionTrabajoGrado"
                 },
                 "VinculacionesCancelacion": {
-                    "$ref": "#/definitions/6997.\u003cnil\u003e.VinculacionTrabajoGrado"
+                    "$ref": "#/definitions/7688.\u003cnil\u003e.VinculacionTrabajoGrado"
                 }
             }
         },
@@ -645,7 +681,7 @@
             "type": "object",
             "properties": {
                 "DetalleTrabajoGrado": {
-                    "$ref": "#/definitions/6475.\u003cnil\u003e.DetalleTrabajoGrado"
+                    "$ref": "#/definitions/7166.\u003cnil\u003e.DetalleTrabajoGrado"
                 },
                 "DocumentoEscrito": {
                     "$ref": "#/definitions/models.DocumentoEscrito"
@@ -657,7 +693,25 @@
                     "$ref": "#/definitions/models.TrabajoGrado"
                 },
                 "Vinculaciones": {
-                    "$ref": "#/definitions/6302.\u003cnil\u003e.VinculacionTrabajoGrado"
+                    "$ref": "#/definitions/6993.\u003cnil\u003e.VinculacionTrabajoGrado"
+                }
+            }
+        },
+        "models.TrSolicitud": {
+            "title": "TrSolicitud",
+            "type": "object",
+            "properties": {
+                "DetalleSolicitud": {
+                    "$ref": "#/definitions/8787.\u003cnil\u003e.DetalleSolicitud"
+                },
+                "Respuesta": {
+                    "$ref": "#/definitions/models.RespuestaSolicitud"
+                },
+                "Solicitud": {
+                    "$ref": "#/definitions/models.SolicitudTrabajoGrado"
+                },
+                "UsuarioSolicitud": {
+                    "$ref": "#/definitions/8826.\u003cnil\u003e.UsuarioSolicitud"
                 }
             }
         },
@@ -666,10 +720,10 @@
             "type": "object",
             "properties": {
                 "AreasTrabajoGrado": {
-                    "$ref": "#/definitions/8210.\u003cnil\u003e.AreasTrabajoGrado"
+                    "$ref": "#/definitions/9109.\u003cnil\u003e.AreasTrabajoGrado"
                 },
                 "AsignaturasTrabajoGrado": {
-                    "$ref": "#/definitions/8310.\u003cnil\u003e.AsignaturaTrabajoGrado"
+                    "$ref": "#/definitions/9209.\u003cnil\u003e.AsignaturaTrabajoGrado"
                 },
                 "DocumentoEscrito": {
                     "$ref": "#/definitions/models.DocumentoEscrito"
@@ -678,13 +732,13 @@
                     "$ref": "#/definitions/models.DocumentoTrabajoGrado"
                 },
                 "EstudianteTrabajoGrado": {
-                    "$ref": "#/definitions/8065.\u003cnil\u003e.EstudianteTrabajoGrado"
+                    "$ref": "#/definitions/8964.\u003cnil\u003e.EstudianteTrabajoGrado"
                 },
                 "TrabajoGrado": {
                     "$ref": "#/definitions/models.TrabajoGrado"
                 },
                 "VinculacionTrabajoGrado": {
-                    "$ref": "#/definitions/8257.\u003cnil\u003e.VinculacionTrabajoGrado"
+                    "$ref": "#/definitions/9156.\u003cnil\u003e.VinculacionTrabajoGrado"
                 }
             }
         },
